linagora/lgs/openpaas/linagora.esn.contact#346 - Fix blurry modal for OP

--- a/frontend/css/styles.less
+++ b/frontend/css/styles.less
@@ -210,7 +210,6 @@ body {
   .modal.center .modal-dialog {
     margin: 0;
     min-width: 300px;
-    top: 50%;
 
     .modal-body {
       max-height: 60vh;
